tests/compiler/diagnostics-engine/frontend-errors/tests/incompatible-conversion/expected.txt
Error: Incompatible conversion from 'int' to 'void'
 --> Override.jack:3:9
  |
3 |         return 10;
  |         ^~~~~~
